--- a/relevance.ini
+++ b/relevance.ini
@@ -3,13 +3,13 @@
 ; Host to run queries on
 labHost = suggesty.eqiad.wmflabs
 ; Command to run a query
-searchCommand = sudo -u vagrant mwscript extensions/CirrusSearch/maintenance/runSearch.php 
+searchCommand = sudo -u vagrant mwscript extensions/CirrusSearch/maintenance/runSearch.php
 ; Working directory
-workDir = /tmp/relevance
+workDir = ./relevance
 ; JSON Diff tool
-jsonDiffTool = python jsondiff.py -d 
-; Metric reporting tool
-metricTool = echo metric
+jsonDiffTool = python jsondiff.py -d
+; Comparison/metric reporting tool
+metricTool = python relcomp.py -d
 
 [test1]
 name = Test 1
@@ -19,5 +19,5 @@ queries = test1.q
 [test2]
 name = Test 2
 queries = test2.q
-config = test2.json
+;config = test2.json
 
