Hack the JSON output with order numbers
Add search result order numbers to the JSON in jsondiff.py so it
is easier to track what's what when reviewing results in the diffs.

Add enwiki as the explicit basename in relevance.ini

Fix line-too-long error in importindices.py to stop tox complaints.

Bug: T126245
Change-Id: I602182f6e242c188fffad23d2f02be20fdb99495

--- a/relevance.ini
+++ b/relevance.ini
@@ -3,7 +3,7 @@
 ; Host to run queries on
 labHost = suggesty.eqiad.wmflabs
 ; Command to run a query
-searchCommand = sudo -u vagrant mwscript extensions/CirrusSearch/maintenance/runSearch.php
+searchCommand = sudo -u vagrant mwscript extensions/CirrusSearch/maintenance/runSearch.php --baseName=enwiki
 ; Working directory
 workDir = ./relevance
 ; JSON Diff tool
