Add score debug info in json diff
Export the 4 main score components:
- function: score based on the function score window (boostlinks by default)
- phrase: phrase rescore on top 256 results by default
- primary: initial lucene score
- main: currently (primary+phrase)*function

NOTE: requires jsonpath-rw (pip install jsonpath-rw)

Bug: T126208
Change-Id: I0796bc90c97e2d55e719d637ca03d263e2120d00

--- a/relevance.ini
+++ b/relevance.ini
@@ -3,6 +3,8 @@
 ; Host to run queries on
 labHost = suggesty.eqiad.wmflabs
 ; Command to run a query
+;   --explain to include scoring information
+;   --limit 100 to increase the number of results (defaults to 10)
 searchCommand = sudo -u vagrant mwscript extensions/CirrusSearch/maintenance/runSearch.php --baseName=enwiki
 ; Working directory
 workDir = ./relevance
