Update Rel Lab: documentation, better error handling, more configurability
README.md
- first pass at basic documentation

relcomp.py
- catch and report on search errors
- make report sections collapsible (and collapse them)
- make number of examples printed configurable from the command line
- refactor query string formatting
- refactor ascii-ification of metric results

relevancyRunner.py
- make queries, labHost, config, and searchCommand global [settings]
  that can be overridden by config under each [test#]

cqd.py
- remove repeated limit init

relevance.ini
- add config and docs for setting examples printed per metric
- added docs for global vs local settings
- moved queries and config under global [settings]

Bug: T126646
Change-Id: Ib5ef1717883ddfce1ec8b3cfd6fd2fdf19a86a7f

--- a/relevance.ini
+++ b/relevance.ini
@@ -11,15 +11,19 @@ workDir = ./relevance
 ; JSON Diff tool
 jsonDiffTool = python jsondiff.py -d
 ; Comparison/metric reporting tool
-metricTool = python relcomp.py -d
+;   additional params should go before -d
+;   -p 100 to set the number of examples printed per metric to 100 (defaults to 20)
+metricTool = python relcomp.py -p 20 -d
+; queries to be run
+queries = test.q
 
 [test1]
 name = Test 1
-queries = test1.q
-;config = test1.json
+config = test1.json
 
 [test2]
 name = Test 2
-queries = test2.q
 ;config = test2.json
 
+; labHost, searchCommand, queries, and config can be specified globally under [settings] or locally under [test#]. Local settings override global settings.
+; config is optional
